--- a/html/index-dev.html
+++ b/html/index-dev.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport"
-              content="width=device-width, initial-scale=1.0">
-        <title>babel-react-rollup-starter</title>
-    </head>
-    <body>
-        <main></main>
-        <script src="../build/app.js"></script>
-    </body>
+<html lang="ko">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <title>드라이브</title>
+</head>
+<body>
+<div id="container"></div>
+<script src="../build/app.js"></script>
+</body>
 </html>
